@@ -3,6 +3,8 @@ Bug fixes:
 	* [spreadsheet] properly paste the data in the format 'yyyy-MM-dd hh:mm:ss' and similar
 	* [xy-curve] fix using custom value label with invalid data points (BUG 455214)
 	* [fit] fix locale usage in evaluation range
+	* [fit] correctly invalidate fit result when model changes
+
 -----2.9.0 (03.05.2022) -----
 	* [general]
 		* Allow to copy&paste and to duplicate single objects in the project explorer
